--- a/src/pages/MusicPage.css
+++ b/src/pages/MusicPage.css
@@ -5,6 +5,7 @@
     display: flex;
     border-bottom: 1px solid black;
     padding-bottom: 10px;
+    margin: 20px 0px 20px 0px;
 }
 .songNSinger{
     margin: auto 0px auto 15px;
